# swc-plugin-console-prefix

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.cargo/: config
examples/: usage.rs
src/: lib.rs
